--- a/Клюев/okno.ui
+++ b/Клюев/okno.ui
@@ -103,6 +103,23 @@ background-color: rgb(205, 171, 143)</string>
      <string>Выход</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_del">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>220</y>
+      <width>171</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 12pt &quot;Open Sans&quot;;
+background-color: rgb(205, 171, 143)</string>
+    </property>
+    <property name="text">
+     <string>Удалить</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
