--- a/Клюев/income.ui
+++ b/Клюев/income.ui
@@ -131,24 +131,15 @@ font: 12pt &quot;Open Sans&quot;;</string>
    <widget class="QDateEdit" name="dateEdit">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>480</x>
       <y>180</y>
-      <width>151</width>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(246, 245, 244);</string>
-    </property>
-    <property name="maximumDate">
-     <date>
-      <year>2999</year>
-      <month>12</month>
-      <day>31</day>
-     </date>
-    </property>
-    <property name="calendarPopup">
-     <bool>true</bool>
+     <string notr="true">background-color: rgb(222, 221, 218);
+</string>
     </property>
    </widget>
   </widget>
